--- a/src/style.css
+++ b/src/style.css
@@ -1,333 +1,244 @@
-/* CSS Custom Properties Definitions */
-
-:root {
-  --maxWidth-none: "none";
-  --maxWidth-xs: 20rem;
-  --maxWidth-sm: 24rem;
-  --maxWidth-md: 28rem;
-  --maxWidth-lg: 32rem;
-  --maxWidth-xl: 36rem;
-  --maxWidth-2xl: 42rem;
-  --maxWidth-3xl: 48rem;
-  --maxWidth-4xl: 56rem;
-  --maxWidth-full: "100%";
-  --maxWidth-wrapper: var(--maxWidth-2xl);
-  --spacing-px: "1px";
-  --spacing-0: 0;
-  --spacing-1: 0.25rem;
-  --spacing-2: 0.5rem;
-  --spacing-3: 0.75rem;
-  --spacing-4: 1rem;
-  --spacing-5: 1.25rem;
-  --spacing-6: 1.5rem;
-  --spacing-8: 2rem;
-  --spacing-10: 2.5rem;
-  --spacing-12: 3rem;
-  --spacing-16: 4rem;
-  --spacing-20: 5rem;
-  --spacing-24: 6rem;
-  --spacing-32: 8rem;
-  --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
-    Times, serif;
-  --font-body: var(--fontFamily-serif);
-  --font-heading: var(--fontFamily-sans);
-  --fontWeight-normal: 400;
-  --fontWeight-medium: 500;
-  --fontWeight-semibold: 600;
-  --fontWeight-bold: 700;
-  --fontWeight-extrabold: 800;
-  --fontWeight-black: 900;
-  --fontSize-root: 16px;
-  --lineHeight-none: 1;
-  --lineHeight-tight: 1.1;
-  --lineHeight-normal: 1.5;
-  --lineHeight-relaxed: 1.625;
-  /* 1.200 Minor Third Type Scale */
-  --fontSize-0: 0.833rem;
-  --fontSize-1: 1rem;
-  --fontSize-2: 1.2rem;
-  --fontSize-3: 1.44rem;
-  --fontSize-4: 1.728rem;
-  --fontSize-5: 2.074rem;
-  --fontSize-6: 2.488rem;
-  --fontSize-7: 2.986rem;
-  --color-primary: #005b99;
-  --color-text: #2e353f;
-  --color-text-light: #4f5969;
-  --color-heading: #1a202c;
-  --color-heading-black: black;
-  --color-accent: #d1dce5;
-}
-
-/* HTML elements */
-
-*,
-:after,
-:before {
-  box-sizing: border-box;
-}
-
-html {
-  line-height: var(--lineHeight-normal);
-  font-size: var(--fontSize-root);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0;
+  padding: 0;
+  color: #121212;
 }
 
 body {
-  font-family: var(--font-body);
-  font-size: var(--fontSize-1);
-  color: var(--color-text);
-}
-
-footer {
-  padding: var(--spacing-6) var(--spacing-0);
-}
-
-hr {
-  background: var(--color-accent);
-  height: 1px;
-  border: 0;
-}
-
-/* Heading */
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--font-heading);
-  margin-top: var(--spacing-12);
-  margin-bottom: var(--spacing-6);
-  line-height: var(--lineHeight-tight);
-  letter-spacing: -0.025em;
-}
-
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: var(--fontWeight-bold);
-  color: var(--color-heading);
+  background-color: #f6f6f6;
+  font-family: "Source Sans Pro", sans-serif;
+  text-rendering: optimizeLegibility;
 }
 
 h1 {
-  font-weight: var(--fontWeight-black);
-  font-size: var(--fontSize-6);
-  color: var(--color-heading-black);
+  margin: 0;
+  font-family: "Montserrat";
+  font-size: 2rem;
 }
 
 h2 {
-  font-size: var(--fontSize-5);
+  margin: 0;
+  margin-top: 1rem;
+  font-family: "Montserrat";
+  font-size: 1.75rem;
 }
 
 h3 {
-  font-size: var(--fontSize-4);
+  margin: 0;
+  margin-top: 1rem;
+  font-family: "Montserrat";
+  font-size: 1.5rem;
 }
-
-h4 {
-  font-size: var(--fontSize-3);
-}
-
-h5 {
-  font-size: var(--fontSize-2);
-}
-
-h6 {
-  font-size: var(--fontSize-1);
-}
-
-h1 > a {
-  color: inherit;
-  text-decoration: none;
-}
-
-h2 > a,
-h3 > a,
-h4 > a,
-h5 > a,
-h6 > a {
-  text-decoration: none;
-  color: inherit;
-}
-
-/* Prose */
 
 p {
-  line-height: var(--lineHeight-relaxed);
-  --baseline-multiplier: 0.179;
-  --x-height-multiplier: 0.35;
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
-  padding: var(--spacing-0);
+  margin: 1rem 0 0 0;
+  font-size: 1.25rem;
+  line-height: 200%;
+  font-weight: 400;
 }
 
-ul,
-ol {
-  margin-left: var(--spacing-0);
-  margin-right: var(--spacing-0);
-  padding: var(--spacing-0);
-  margin-bottom: var(--spacing-8);
-  list-style-position: outside;
-  list-style-image: none;
+p:last-child {
+  margin-bottom: 1rem;
 }
 
-ul li,
-ol li {
-  padding-left: var(--spacing-0);
-  margin-bottom: calc(var(--spacing-8) / 2);
+h1:hover, h2:hover, h3:hover, p:hover {
+  cursor: default;
 }
 
-li > p {
-  margin-bottom: calc(var(--spacing-8) / 2);
+a {
+  color: #0EA5A0;
 }
 
-li *:last-child {
-  margin-bottom: var(--spacing-0);
+a:hover {
+  text-decoration: underline;
 }
 
-li > ul {
-  margin-left: var(--spacing-8);
-  margin-top: calc(var(--spacing-8) / 2);
+.active {
+  text-decoration: underline !important;
+  color: #121212;
+}
+
+nav {
+  overflow: hidden;
+  margin: 0;
+  text-align: center;
+  width: 100%;
+  height: auto;
+  padding: 4rem 0rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+nav #title {
+  font-size: 2rem;
+  float: left;
+  font-family: "Montserrat";
+  font-weight: 600;
+  margin-left: 16rem;
+}
+nav #title:hover {
+  text-decoration: underline;
+}
+nav .nav-right {
+  vertical-align: bottom !important;
+  margin-right: 16rem;
+  float: right;
+  height: auto;
+  width: auto;
+}
+nav .nav-right a {
+  float: left;
+  color: #707070;
+  text-align: center;
+  padding: 0px 42px;
+  text-decoration: none;
+}
+nav .nav-right a:last-child {
+  padding-right: 0;
+}
+nav .nav-right a:hover {
+  color: #121212;
+  text-decoration: underline;
+}
+
+.articles h1 {
+  margin-top: 1rem;
+}
+.articles h2 {
+  margin-top: 1rem;
+}
+.articles h3 {
+  margin-top: 1rem;
+}
+.articles a {
+  color: #121212;
+}
+
+.dateRead {
+  color: #707070;
+}
+
+.container {
+  display: grid;
+  padding: 6rem 26rem 1rem 26rem;
+}
+
+.project {
+  display: inline-grid;
+}
+
+code {
+  font-family: "Source Code Pro";
+  background-color: #E3E2DA;
+  padding: 0 4px;
+}
+
+hr:last-child {
+  margin-bottom: 1rem;
+}
+
+ul, ol {
+  font-size: 1.25rem;
+  list-style-position: inside;
+  text-align: left;
 }
 
 blockquote {
-  color: var(--color-text-light);
-  margin-left: calc(-1 * var(--spacing-6));
-  margin-right: var(--spacing-8);
-  padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
-  border-left: var(--spacing-1) solid var(--color-primary);
-  font-size: var(--fontSize-2);
-  font-style: italic;
-  margin-bottom: var(--spacing-8);
+  display: block;
+  border-left: 10px solid #707070;
+  margin: 1.5rem 0.5rem;
+  padding: 0.25rem 2rem;
 }
 
-blockquote > :last-child {
-  margin-bottom: var(--spacing-0);
+footer {
+  position: relative;
+  bottom: 0;
 }
 
-blockquote > ul,
-blockquote > ol {
-  list-style-position: inside;
-}
-
-table {
+.projectContainer {
   width: 100%;
-  margin-bottom: var(--spacing-8);
-  border-collapse: collapse;
-  border-spacing: 0.25rem;
-}
-
-table thead tr th {
-  border-bottom: 1px solid var(--color-accent);
-}
-
-/* Link */
-
-a {
-  color: var(--color-primary);
-}
-
-a:hover,
-a:focus {
-  text-decoration: none;
-}
-
-/* Custom classes */
-
-.global-wrapper {
-  margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-10) var(--spacing-5);
-}
-
-.global-wrapper[data-is-root-path="true"] .bio {
-  margin-bottom: var(--spacing-20);
-}
-
-.global-header {
-  margin-bottom: var(--spacing-12);
-}
-
-.main-heading {
-  font-size: var(--fontSize-7);
   margin: 0;
+  padding: 2rem 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2rem;
 }
 
-.post-list-item {
-  margin-bottom: var(--spacing-8);
-  margin-top: var(--spacing-8);
+.project {
+  display: inline;
+  background-color: #E3E2DA;
+  padding: 0.5rem 2rem 1.5rem 2rem;
+  transition: 250ms ease-in-out;
+}
+.project:hover {
+  background-color: #0EA5A0;
+  transform: scale(1.05, 1.05);
+}
+.project:hover p, .project:hover h3, .project:hover a i {
+  color: #f6f6f6;
+}
+.project a i {
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  margin-right: 1rem;
 }
 
-.post-list-item p {
-  margin-bottom: var(--spacing-0);
-}
-
-.post-list-item h2 {
-  font-size: var(--fontSize-4);
-  color: var(--color-primary);
-  margin-bottom: var(--spacing-2);
-  margin-top: var(--spacing-0);
-}
-
-.post-list-item header {
-  margin-bottom: var(--spacing-4);
-}
-
-.header-link-home {
-  font-weight: var(--fontWeight-bold);
-  font-family: var(--font-heading);
+.isDisabled {
+  color: #707070;
+  cursor: not-allowed;
+  opacity: 0.5;
   text-decoration: none;
-  font-size: var(--fontSize-2);
 }
 
-.bio {
-  display: flex;
-  margin-bottom: var(--spacing-16);
+.fancyhover {
+  transition: all 240ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.bio p {
-  margin-bottom: var(--spacing-0);
-}
-
-.bio-avatar {
-  margin-right: var(--spacing-4);
-  margin-bottom: var(--spacing-0);
-  min-width: 50px;
-  border-radius: 100%;
-}
-
-.blog-post header h1 {
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
-}
-
-.blog-post header p {
-  font-size: var(--fontSize-2);
-  font-family: var(--font-heading);
-}
-
-.blog-post-nav ul {
-  margin: var(--spacing-0);
-}
-
-.gatsby-highlight {
-  margin-bottom: var(--spacing-8);
-}
-
-/* Media queries */
-
-@media (max-width: 42rem) {
-  blockquote {
-    padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
-    margin-left: var(--spacing-0);
+@media (max-width: 1600px) {
+  nav #title {
+    margin-left: 4rem;
   }
-  ul,
-  ol {
-    list-style-position: inside;
+  nav .nav-right {
+    margin-right: 4rem;
+  }
+
+  .container {
+    padding: 1rem 4rem;
   }
 }
+@media (max-width: 1024px) {
+  nav #title {
+    margin-left: 2rem;
+  }
+  nav .nav-right {
+    margin-right: 2rem;
+  }
+  nav .nav-right a {
+    padding: 0px 1rem;
+  }
+
+  .container {
+    padding: 1rem 2rem;
+  }
+
+  .projectContainer {
+    grid-template-columns: 100%;
+  }
+}
+@media (max-width: 576px) {
+  nav #title {
+    margin-left: 1rem;
+  }
+  nav .nav-right {
+    margin-right: 1rem;
+  }
+  nav .nav-right a {
+    padding: 0px 0.5rem;
+  }
+
+  .container {
+    padding: 1rem 1rem;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
