--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,65 @@
+:root {
+  --maxWidth-none: "none";
+  --maxWidth-xs: 20rem;
+  --maxWidth-sm: 24rem;
+  --maxWidth-md: 28rem;
+  --maxWidth-lg: 32rem;
+  --maxWidth-xl: 36rem;
+  --maxWidth-2xl: 42rem;
+  --maxWidth-3xl: 48rem;
+  --maxWidth-4xl: 56rem;
+  --maxWidth-full: "100%";
+  --maxWidth-wrapper: var(--maxWidth-2xl);
+  --spacing-px: "1px";
+  --spacing-0: 0;
+  --spacing-1: 0.25rem;
+  --spacing-2: 0.5rem;
+  --spacing-3: 0.75rem;
+  --spacing-4: 1rem;
+  --spacing-5: 1.25rem;
+  --spacing-6: 1.5rem;
+  --spacing-8: 2rem;
+  --spacing-10: 2.5rem;
+  --spacing-12: 3rem;
+  --spacing-16: 4rem;
+  --spacing-20: 5rem;
+  --spacing-24: 6rem;
+  --spacing-32: 8rem;
+  --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --fontFamily-serif: "Source Sans Pro", "Georgia", Cambria, "Times New Roman",
+    Times, serif;
+  --font-body: var(--fontFamily-serif);
+  --font-heading: var(--fontFamily-sans);
+  --fontWeight-normal: 400;
+  --fontWeight-medium: 500;
+  --fontWeight-semibold: 600;
+  --fontWeight-bold: 700;
+  --fontWeight-extrabold: 800;
+  --fontWeight-black: 900;
+  --fontSize-root: 16px;
+  --lineHeight-none: 1;
+  --lineHeight-tight: 1.1;
+  --lineHeight-normal: 1.5;
+  --lineHeight-relaxed: 1.625;
+  /* 1.200 Minor Third Type Scale */
+  --fontSize-0: 0.833rem;
+  --fontSize-1: 1rem;
+  --fontSize-2: 1.2rem;
+  --fontSize-3: 1.44rem;
+  --fontSize-4: 1.728rem;
+  --fontSize-5: 2.074rem;
+  --fontSize-6: 2.488rem;
+  --fontSize-7: 2.986rem;
+  --color-primary: #0EA5A0;
+  --color-text: #2e353f;
+  --color-text-light: #4f5969;
+  --color-heading: #1a202c;
+  --color-heading-black: black;
+  --color-accent: #d1dce5;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -10,31 +72,62 @@ body {
   text-rendering: optimizeLegibility;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  
+  margin-top: var(--spacing-12);
+  margin-bottom: var(--spacing-6);
+  line-height: var(--lineHeight-tight);
+  letter-spacing: -0.025em;
+}
+
 h1 {
-  margin: 0;
+
+  font-family: "Montserrat";
+  font-size: 2.5rem;
+}
+h1:first-child{
+  margin-top:0
+}
+h2 {
   font-family: "Montserrat";
   font-size: 2rem;
 }
 
-h2 {
-  margin: 0;
-  margin-top: 1rem;
+h3 {
+
   font-family: "Montserrat";
   font-size: 1.75rem;
 }
+h4 {
 
-h3 {
-  margin: 0;
-  margin-top: 1rem;
   font-family: "Montserrat";
   font-size: 1.5rem;
 }
+h5 {
 
+  font-family: "Montserrat";
+  font-size: 1.25rem;
+}
+h6 {
+
+  font-family: "Montserrat";
+  font-size: 1rem;
+}
 p {
   margin: 1rem 0 0 0;
   font-size: 1.25rem;
   line-height: 200%;
   font-weight: 400;
+  line-height: var(--lineHeight-relaxed);
+    --baseline-multiplier: 0.179;
+    --x-height-multiplier: 0.35;
+    margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
+    padding: var(--spacing-0);
 }
 
 p:last-child {
@@ -52,7 +145,34 @@ a {
 a:hover {
   text-decoration: underline;
 }
+ul,
+ol {
+  margin-left: var(--spacing-0);
+  margin-right: var(--spacing-0);
+  padding: var(--spacing-0);
+  margin-bottom: var(--spacing-8);
+  list-style-position: outside;
+  list-style-image: none;
+}
 
+ul li,
+ol li {
+  padding-left: var(--spacing-0);
+  margin-bottom: calc(var(--spacing-8) / 2);
+}
+
+li>p {
+  margin-bottom: calc(var(--spacing-8) / 2);
+}
+
+li *:last-child {
+  margin-bottom: var(--spacing-0);
+}
+
+li>ul {
+  margin-left: var(--spacing-8);
+  margin-top: calc(var(--spacing-8) / 2);
+}
 .active {
   text-decoration: underline !important;
   color: #121212;
@@ -120,6 +240,7 @@ nav .nav-right a:hover {
 
 .container {
   display: grid;
+  overflow: hidden;
   padding: 6rem 26rem 1rem 26rem;
 }
 
@@ -193,7 +314,49 @@ footer {
 .fancyhover {
   transition: all 240ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
+blockquote {
+  color: var(--color-text-light);
+  margin-left: calc(-1 * var(--spacing-6));
+  margin-right: var(--spacing-8);
+  padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
+  border-left: var(--spacing-1) solid var(--color-primary);
+  font-size: var(--fontSize-2);
+  font-style: italic;
+  margin-bottom: var(--spacing-8);
+}
 
+blockquote> :last-child {
+  margin-bottom: var(--spacing-0);
+}
+
+blockquote>ul,
+blockquote>ol {
+  list-style-position: inside;
+}
+.gatsby-highlight{
+  padding: 0;
+  margin: 0;
+
+}
+code{
+
+}
+.indexBio{
+  font-weight: 600;
+  font-size: 2rem;
+  letter-spacing: 0;
+}
+
+.category{
+  text-decoration: underline;
+  text-decoration-color: var(--color-primary);
+}
+.pageTitle {
+  text-align: center;
+} 
+img{
+  max-width: fit-content;
+}
 @media (max-width: 1600px) {
   nav #title {
     margin-left: 4rem;
@@ -204,6 +367,17 @@ footer {
 
   .container {
     padding: 1rem 4rem;
+  }
+}
+@media (max-width: 42rem) {
+  blockquote {
+    padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
+    margin-left: var(--spacing-0);
+  }
+
+  ul,
+  ol {
+    list-style-position: inside;
   }
 }
 @media (max-width: 1024px) {
