--- a/src/style.css
+++ b/src/style.css
@@ -68,7 +68,7 @@
 
 body {
   background-color: #f6f6f6;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Source Sans Pro", system-ui, -apple-system,BlinkMacSystemFont,"Segoe UI", Roboto;
   text-rendering: optimizeLegibility;
 }
 
